After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757353 - multiqueue: Fix high_time computation
multiqueue: Fix high_time computation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.7.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-30 11:26 UTC by Edward Hervey
Modified: 2015-12-02 15:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
multiqueue: Fix high_time computation (5.17 KB, patch)
2015-10-30 11:26 UTC, Edward Hervey
committed Details | Review

Description Edward Hervey 2015-10-30 11:26:49 UTC
See comment
Comment 1 Edward Hervey 2015-10-30 11:26:58 UTC
Created attachment 314454 [details] [review]
multiqueue: Fix high_time computation

* Avoid the computation completely if we know we don't need it (not in
  sync time mode)
* Make sure we don't override highest time with GST_CLOCK_TIME_NONE on
  unlinked pads
* Ensure the high_time gets properly updated if all pads are not linked
* Fix the comparision in the loop whether the target high time is the same
  as the current time
* Split wake_up_next_non_linked method to avoid useless calculation
Comment 2 Sebastian Dröge (slomo) 2015-10-30 11:53:10 UTC
Comment on attachment 314454 [details] [review]
multiqueue: Fix high_time computation

Makes sense
Comment 3 Edward Hervey 2015-11-30 08:21:47 UTC
This had a few issues still. Will update soon
Comment 4 Edward Hervey 2015-12-02 15:09:50 UTC
commit 785edec27004369739ea3ece18bf36a68fe09865
Author: Edward Hervey <edward@centricular.com>
Date:   Fri Oct 30 10:22:20 2015 +0100

    multiqueue: Fix high_time computation
    
    * Avoid the computation completely if we know we don't need it (not in
      sync time mode)
    * Make sure we don't override highest time with GST_CLOCK_TIME_NONE on
      unlinked pads
    * Ensure the high_time gets properly updated if all pads are not linked
    * Fix the comparision in the loop whether the target high time is the same
      as the current time
    * Split wake_up_next_non_linked method to avoid useless calculation
    
    https://bugzilla.gnome.org/show_bug.cgi?id=757353